force-app/main/default/objects/Lead/fields/Budget_Score__c.field-meta.xml
<CustomField>
    <fullName>Budget_Score__c</fullName>
    <description>LTC-2: Outputs a number based on whether a budget has been identified.</description>
    <formula>IF( Has_Budget__c = TRUE, 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>