force-app/main/default/objects/Lead/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LTC-2: The competitor company with which we are in direct competition on this opportunity.</description>
    <inlineHelpText>The competitor company with which we are in direct competition on this opportunity.</inlineHelpText>
    <label>Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Competitor)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>