force-app/main/default/objects/Lead/fields/Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LTC-2: Captures who is currently providing services for this Lead.</description>
    <label>Current Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>