force-app/main/default/objects/Lead/fields/DACH_Fax_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>DACH_Fax_Opt_In__c</fullName>
    <description>LTC-2: Permission to contact via Fax in DACH region</description>
    <inlineHelpText>Permission to contact via Fax in DACH region</inlineHelpText>
    <label>DACH Fax Opt In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>German_Compliance</valueSetName>
    </valueSet>
</CustomField>