force-app/main/default/objects/Lead/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LTC-2: Boolean that determines whether decision maker has been identified.</description>
    <inlineHelpText>Has a decision maker been identified?</inlineHelpText>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>