force-app/main/default/objects/Lead/fields/Decision_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Decision_Timeframe__c</fullName>
    <description>LTC-2: Captures indicative timelines for a decision to be made.</description>
    <inlineHelpText>Is there a timeline for a decision?</inlineHelpText>
    <label>Decision Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Immediately</fullName><default>false</default><label>Immediately</label></value>
            <value><fullName>1-3 Months</fullName><default>false</default><label>1-3 Months</label></value>
            <value><fullName>3-6 Months</fullName><default>false</default><label>3-6 Months</label></value>
            <value><fullName>6-12 Months</fullName><default>false</default><label>6-12 Months</label></value>
            <value><fullName>Next Year</fullName><default>false</default><label>Next Year</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>