force-app/main/default/objects/Lead/fields/Decision_Timeframe_Score__c.field-meta.xml
<CustomField>
    <fullName>Decision_Timeframe_Score__c</fullName>
    <description>LTC-2: Outputs a number based on whether Decision timeframe has been identified.</description>
    <formula>CASE( Decision_Timeframe__c , &quot;Immediately&quot;, 5, &quot;1-3 Months&quot;,4,&quot;3-6 Months&quot;,3,&quot;6-12 Months&quot;,2,&quot;Next Year&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Timeframe Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>