force-app/main/default/objects/Lead/fields/Declaration_Given_Inkl_Processing_Usage__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Given_Inkl_Processing_Usage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LTC-2: Permission to contact given in DACH region</description>
    <inlineHelpText>Permission to contact given in DACH region</inlineHelpText>
    <label>Declaration Given(Inkl.Processing+Usage)</label>
    <type>Checkbox</type>
</CustomField>