force-app/main/default/objects/Lead/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <description>LTC-2: Captures the reason the lead was disqualified.</description>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Poor Data Quality</fullName><default>false</default><label>Poor Data Quality</label></value>
            <value><fullName>Not Our Target Market</fullName><default>false</default><label>Not Our Target Market</label></value>
            <value><fullName>Product Does Not Match Needs</fullName><default>false</default><label>Product Does Not Match Needs</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>