force-app/main/default/objects/Lead/fields/Handover_Notes__c.field-meta.xml
<CustomField>
    <fullName>Handover_Notes__c</fullName>
    <description>LTC-2: Captures key notes for handover to Sales</description>
    <inlineHelpText>Captures key notes for handover to Sales</inlineHelpText>
    <label>Handover Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>