force-app/main/default/objects/Lead/fields/Has_Budget__c.field-meta.xml
<CustomField>
    <fullName>Has_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LTC-2: Boolean that determines whether budget has been identified.</description>
    <inlineHelpText>Is there an agreed budget?</inlineHelpText>
    <label>Has Budget</label>
    <type>Checkbox</type>
</CustomField>