force-app/main/default/objects/Lead/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>LTC-2: IP Address DACH Opt in collected from</description>
    <inlineHelpText>IP Address DACH Opt in collected from</inlineHelpText>
    <label>IP Address</label>
    <length>12</length>
    <type>Text</type>
</CustomField>