force-app/main/default/objects/Lead/fields/Lead_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LTC-2: Captures the Salesforce user who referred the Lead.</description>
    <label>Lead Referred By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>