force-app/main/default/objects/Lead/fields/Lead_Source_Team__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Team__c</fullName>
    <description>LTC-2: The team who generates/creates the lead.</description>
    <inlineHelpText>The team who generates/creates the lead.</inlineHelpText>
    <label>Lead Source Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Sales</fullName><default>false</default><label>Sales</label></value>
            <value><fullName>Marketing</fullName><default>false</default><label>Marketing</label></value>
            <value><fullName>BDR Team</fullName><default>false</default><label>BDR Team</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>