force-app/main/default/objects/Lead/fields/Marketing_Persona__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Persona__c</fullName>
    <description>LTC-2: Field used for segmentation of the lead</description>
    <label>Marketing Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Finance Associate</fullName><default>false</default><label>Finance Associate</label></value>
            <value><fullName>Finance Manager</fullName><default>false</default><label>Finance Manager</label></value>
            <value><fullName>GM/Dealer Principal</fullName><default>false</default><label>GM/Dealer Principal</label></value>
            <value><fullName>IT Associate</fullName><default>false</default><label>IT Associate</label></value>
            <value><fullName>IT Manager</fullName><default>false</default><label>IT Manager</label></value>
            <value><fullName>Marketing Associate</fullName><default>false</default><label>Marketing Associate</label></value>
            <value><fullName>Marketing Manager</fullName><default>false</default><label>Marketing Manager</label></value>
            <value><fullName>Member Dealer/Prof. Assoc.</fullName><default>false</default><label>Member Dealer/Prof. Assoc.</label></value>
            <value><fullName>OEM IT</fullName><default>false</default><label>OEM IT</label></value>
            <value><fullName>OEM MGMT</fullName><default>false</default><label>OEM MGMT</label></value>
            <value><fullName>OEM Zone Manager</fullName><default>false</default><label>OEM Zone Manager</label></value>
            <value><fullName>Parts Associate</fullName><default>false</default><label>Parts Associate</label></value>
            <value><fullName>Parts Manager</fullName><default>false</default><label>Parts Manager</label></value>
            <value><fullName>Sales Associate</fullName><default>false</default><label>Sales Associate</label></value>
            <value><fullName>Sales Manager</fullName><default>false</default><label>Sales Manager</label></value>
            <value><fullName>Aftersales Associate</fullName><default>false</default><label>Aftersales Associate</label></value>
            <value><fullName>Aftersales Manager</fullName><default>false</default><label>Aftersales Manager</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>