force-app/main/default/objects/Lead/fields/MQL__c.field-meta.xml
<CustomField>
    <fullName>MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LTC-2: Check box to indicate a lead has been qualified by Marketing</description>
    <inlineHelpText>Has the lead been qualified by Marketing?</inlineHelpText>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>