force-app/main/default/objects/Lead/fields/MQL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date_Time__c</fullName>
    <description>LTC-2: Timestamp of when lead is qualified by Marketing.</description>
    <label>MQL Date/Time</label>
    <type>DateTime</type>
</CustomField>