force-app/main/default/objects/Lead/fields/Project_Defined__c.field-meta.xml
<CustomField>
    <fullName>Project_Defined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LTC-2: Boolean that determines whether a project has been identified.</description>
    <inlineHelpText>Has a project been defined?</inlineHelpText>
    <label>Project Defined</label>
    <type>Checkbox</type>
</CustomField>