force-app/main/default/objects/Lead/fields/Project_Defined_Score__c.field-meta.xml
<CustomField>
    <fullName>Project_Defined_Score__c</fullName>
    <description>LTC-2: Outputs a number based on whether a Project has been defined.</description>
    <formula>IF( Project_Defined__c = TRUE, 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Defined Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>