force-app/main/default/objects/Lead/fields/SQL__c.field-meta.xml
<CustomField>
    <fullName>SQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LTC-2: Check box to indicate a lead has been qualified by Sales</description>
    <inlineHelpText>Has the lead been qualified by Sales?</inlineHelpText>
    <label>SQL</label>
    <type>Checkbox</type>
</CustomField>