force-app/main/default/objects/Lead/fields/SQL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SQL_Date_Time__c</fullName>
    <description>LTC-2: Timestamp of when lead is qualified by Sales.</description>
    <label>SQL Date/Time</label>
    <type>DateTime</type>
</CustomField>