force-app/main/default/objects/Lead/fields/Sys_Opt_In_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Sys_Opt_In_Date_time__c</fullName>
    <description>LTC-2: Date and Time DACH opt in given</description>
    <inlineHelpText>Date and Time DACH opt in given</inlineHelpText>
    <label>Sys Opt In(Date/time)</label>
    <type>DateTime</type>
</CustomField>