force-app/main/default/objects/Lead/validationRules/Budget_nurture_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_nurture_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Process_Deactivation__c.Disable_All_Validation_Rules__c),
Has_Budget__c = True, ISPICKVAL(Nurture_Reason__c, &quot;Budget not available&quot;)
)</errorConditionFormula>
    <errorDisplayField>Nurture_Reason__c</errorDisplayField>
    <errorMessage>Please either confirm the lead has budget or budget not available</errorMessage>
</ValidationRule>