force-app/main/default/objects/Lead/validationRules/DisqualifiedReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>DisqualifiedReasonRequired</fullName>
    <active>true</active>
    <description>ensures that a disqualified reason is captured if the status is set to Disqualified</description>
    <errorConditionFormula>AND(
    NOT($Setup.Process_Deactivation__c.Disable_All_Validation_Rules__c),
    ISPICKVAL(Status, &quot;Disqualified&quot;),
    ISBLANK(TEXT(Disqualified_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Disqualified_Reason__c</errorDisplayField>
    <errorMessage>Please ensure you capture the reason this lead is being disqualified</errorMessage>
</ValidationRule>