force-app/main/default/objects/Lead/validationRules/HandoverNotesCapturedPreConvert.validationRule-meta.xml
<ValidationRule>
    <fullName>HandoverNotesCapturedPreConvert</fullName>
    <active>true</active>
    <description>User cannot set the status to converted unless the Handover notes are populated</description>
    <errorConditionFormula>AND(NOT($Setup.Process_Deactivation__c.Disable_All_Validation_Rules__c),
ISPICKVAL(Status,&quot;Qualified&quot;), ISBLANK(Handover_Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Handover_Notes__c</errorDisplayField>
    <errorMessage>Please ensure that you capture the handover notes before converting this lead</errorMessage>
</ValidationRule>