force-app/main/default/objects/Lead/listViews/Canada_Business_Development_Reps_Lead.listView-meta.xml
<ListView>
    <fullName>Canada_Business_Development_Reps_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Country__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Decision_Maker__c</columns>
    <columns>Project_Defined__c</columns>
    <columns>Has_Budget__c</columns>
    <columns>Decision_Timeframe__c</columns>
    <filterScope>Queue</filterScope>
    <label>Canada</label>
    <queue>Canada</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>