force-app/main/default/objects/Lead/listViews/Unassigned_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Unassigned_Leads_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Country__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Decision_Maker__c</columns>
    <columns>Project_Defined__c</columns>
    <columns>Has_Budget__c</columns>
    <columns>Decision_Timeframe__c</columns>
    <filterScope>Queue</filterScope>
    <label>Unassigned Leads</label>
    <queue>Unassigned_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>